# github-agent

./: .gitignore  AGENT.md  CLAUDE.md  HTTP_SERVICES_README.md  MULTI_REPO_README.md  PR-REVIEW-AGENT-SETUP-GUIDE.md  PR_QUEUE_README.md  PYTHON_CI_SETUP.md  README.md  client_manager.py  codebase_cli.py  codebase_repository_config.py  codebase_tools.py  codecov.yml  constants.py  exit_codes.py  github_mcp_master.py  github_mcp_server.py  github_mcp_server_multi_repo.py  github_mcp_worker.py  github_query.py  github_tools.py  health_monitor.py  init_project.sh  install-services.sh  integrated_shutdown_manager.py  lsp_client.py  lsp_constants.py  lsp_jsonrpc.py  lsp_server_manager.py  mcp_master.py  mcp_worker.py  mypy.ini  pr_agent_server.py  pr_agent_setup.md  pr_reply_worker.py  pr_review_server.py  pr_review_server_cli.py  pull_pr_comments.py  pyproject.toml  (+28 more)
.github/workflows/: pr-checks.yml
config/: repositories.example.json  repositories_schema.json  services.env  test_repositories.json
improvements/: cleanup_mocks.md  mcp-server-shutdown-design.md  mcp_codebase_server_design.md  mcp_codebase_server_user_stories.md  mcp_pr_reply_queue.md  multi-port-architecture.md  multi-repository-url-routing.md  shutdown-flow-analysis.md  worker-controlled-shutdown-architecture.md  workspace-unification-and-validation-system.md
improvements/mcp_codebase_server_user_stories/: US001-Basic-MCP-Server-Setup.md  US003-Single-Python-Repository-Discovery.md  US005-Python-LSP-Integration.md
ruff_autofix_output/: changed-files.txt  diff-stat.txt  git-status-after.txt  git-status-before.txt  github_outputs.txt
scripts/: deploy.sh  install-services.sh  ruff-autofix.sh  run-code-checks.sh  uninstall-services.sh
setup/: setup_pr_queue.sh  setup_system.sh  verify_imports.py
systemd/: pr-agent.service
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_abstracts.py  test_basic.py  test_client_manager.py  test_codebase_cli.py  test_codebase_cli_integration.py  test_codebase_repository_config.py  test_codebase_repository_config_integration.py  test_codebase_tools.py  test_configuration_management.py  test_edge_cases.py  test_error_handling.py  test_exit_codes.py  test_fixtures.py  test_get_linter_errors.py  test_health_monitor.py  test_log_parsing.py  test_lsp_client.py  test_lsp_integration.py  test_lsp_jsonrpc.py  test_mcp_integration.py  test_mcp_integration.py.disabled  test_mcp_master_configuration.py  test_mcp_master_configuration.py.disabled  test_mcp_search_symbols_integration.py  test_mcp_worker.py  test_memory_pressure.py  test_multi_repo_server.py  test_multi_repository_integration.py  test_parse_build_output.py  test_phase1_simple.py  test_pyright_lsp_manager.py  test_python_linter_parsing.py  test_python_repository_manager.py  test_python_repository_manager_integration.py  test_python_symbol_extractor.py  test_repository_aware_tools.py  (+16 more)
